--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="colorPrimary">#FF0000</color>
     <color name="colorPrimaryDark">#FF0000</color>
-    <color name="colorAccent">#FF0000</color>
+    <color name="colorAccent">#A20000</color>
+    <color name="colorWhite">#ffffff</color>
 </resources>
