--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#FF0000</color>
     <color name="colorAccent">#A20000</color>
     <color name="colorWhite">#ffffff</color>
+    <color name="titleColor">#E42121</color>
 </resources>
