--- a/app/src/main/res/layout/schedule_fragment.xml
+++ b/app/src/main/res/layout/schedule_fragment.xml
@@ -8,6 +8,20 @@
     android:layout_height="match_parent"
     tools:context="com.example.teatrnachaynoy.MainActivity">
 
+    <ProgressBar
+        android:id="@+id/progressSchedule"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:outlineAmbientShadowColor="@color/colorAccent"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/scheduleRecycler"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/scheduleRecycler"
+        app:layout_constraintTop_toTopOf="@+id/scheduleRecycler" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/scheduleRecycler"
         android:layout_width="match_parent"
