--- a/app/src/main/res/layout/schedule_item.xml
+++ b/app/src/main/res/layout/schedule_item.xml
@@ -22,39 +22,14 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/dateTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="8dp"
-                android:text='@{schedule.date}'
-                android:textAppearance="?android:textAppearanceMedium"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
-
-            <TextView
-                android:id="@+id/dayTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/dateTxt"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
-                android:text='@{schedule.day}'
-                android:textAppearance="?android:textAppearanceMedium"
-                app:layout_constraintEnd_toStartOf="@+id/timeTxt"
-                app:layout_constraintStart_toEndOf="@+id/dateTxt"
-                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
-
-            <TextView
                 android:id="@+id/titleTxt"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
-                android:text='@{schedule.title}'
                 android:gravity="center"
+                android:text='@{schedule.title}'
                 android:textAppearance="?android:textAppearanceLarge"
                 android:textColor="@color/titleColor"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -62,41 +37,40 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/dateTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="8dp"
+                android:text='@{schedule.date}'
+                android:textAppearance="?android:textAppearanceMedium"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
+
+            <TextView
                 android:id="@+id/timeLenghtTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="32dp"
                 android:layout_marginEnd="8dp"
                 android:text='@{schedule.time_lenght}'
-                android:textAppearance="?android:textAppearanceMedium"
+                android:textAppearance="?android:textAppearanceSmall"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/dayTxt" />
-
-            <TextView
-                android:id="@+id/timeTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="64dp"
-                android:text='@{schedule.time}'
-                android:textAppearance="?android:textAppearanceMedium"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
 
             <TextView
-                android:id="@+id/costTxt"
+                android:id="@+id/timeAndPriceTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="32dp"
-                android:text='@{schedule.cost}'
+                android:text='@{schedule.time_and_price}'
                 android:textAppearance="?android:textAppearanceMedium"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/timeLenghtTxt" />
+                app:layout_constraintTop_toBottomOf="@+id/titleTxt" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
