--- a/app/src/main/res/layout/actors_view_item.xml
+++ b/app/src/main/res/layout/actors_view_item.xml
@@ -20,45 +20,43 @@
             android:layout_height="wrap_content"
             android:background="?android:selectableItemBackground"
             android:orientation="vertical"
-            android:padding="0dp">
+            >
 
             <ImageView
                 android:id="@+id/itemImage"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
                 android:scaleType="fitCenter"
-                android:src="@drawable/ic_face_black_24dp"
+                app:imageUrl="@{actorsInfo.image}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/actorsName"
-                android:layout_width="match_parent"
+                android:id="@+id/charactersName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:gravity="center"
-                android:padding="5dp"
-                android:text="@{actorsInfo.name}"
+                android:text="@{actorsInfo.charecter}"
                 android:textColor="@android:color/black"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/itemImage" />
 
             <TextView
-                android:id="@+id/charactersName"
-                android:layout_width="match_parent"
+                android:id="@+id/actorsName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="2dp"
                 android:gravity="center"
-                android:text="@{actorsInfo.charecter}"
+                android:text="@{actorsInfo.name}"
                 android:textColor="@android:color/black"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/actorsName" />
+                app:layout_constraintTop_toBottomOf="@+id/charactersName" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
