--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorWhite">#ffffff</color>
     <color name="titleColor">#E42121</color>
     <color name="colorBlack">#000000</color>
+    <color name="colorGrey">#969696</color>
 </resources>
