--- a/app/src/main/res/layout/actors_view_item.xml
+++ b/app/src/main/res/layout/actors_view_item.xml
@@ -25,9 +25,9 @@
             <ImageView
                 android:id="@+id/itemImage"
                 android:layout_width="wrap_content"
-                android:layout_height="150dp"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:scaleType="fitCenter"
+                android:scaleType="fitXY"
                 android:src="@drawable/ic_face_black_24dp"
                 app:imageUrl="@{actorsInfo.image}"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -38,7 +38,7 @@
                 android:id="@+id/charactersName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="2dp"
                 android:gravity="center"
                 android:text="@{actorsInfo.charecter}"
                 android:textColor="@android:color/black"
@@ -54,7 +54,7 @@
                 android:gravity="center"
                 android:text="@{actorsInfo.name}"
                 android:textColor="@android:color/black"
-                android:textSize="14sp"
+                android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/charactersName" />
