--- a/app/src/main/res/layout/activity_actors.xml
+++ b/app/src/main/res/layout/activity_actors.xml
@@ -24,11 +24,12 @@
 
             <ImageView
                 android:id="@+id/actorsImage"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="4dp"
+                android:scaleType="centerCrop"
+                android:adjustViewBounds="true"
                 app:imageUrl="@{actors.image}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +41,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:layout_marginEnd="16dp"
                 android:gravity="center"
                 android:text="@{actors.name}"
