--- a/app/src/main/res/layout/schedule_fragment.xml
+++ b/app/src/main/res/layout/schedule_fragment.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:outlineAmbientShadowColor="@color/colorAccent"
+        android:color="@color/colorAccent"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/scheduleRecycler"
         app:layout_constraintEnd_toEndOf="parent"
