--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,6 +14,6 @@
         android:adjustViewBounds="true"
         android:scaleType="centerCrop"
         android:contentDescription="@string/nav_header_desc"
-        app:srcCompat="@drawable/ic_theater_logo" />
+        app:srcCompat="@drawable/ic_logo" />
 
 </LinearLayout>
