--- a/app/src/main/res/layout/contacts_fragment.xml
+++ b/app/src/main/res/layout/contacts_fragment.xml
@@ -17,7 +17,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context="com.example.teatrnachaynoy.MainActivity">
 
@@ -51,8 +51,8 @@
                 android:layout_marginEnd="4dp"
                 android:autoLink="all"
                 android:linksClickable="true"
-                android:textColor="@color/colorPrimary"
                 android:text="@string/geo"
+                android:textColor="@color/colorPrimary"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -77,9 +77,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="2dp"
-                android:text="@string/phone_number"
                 android:autoLink="all"
                 android:linksClickable="true"
+                android:text="@string/phone_number"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -91,9 +91,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="16dp"
-                android:text="@string/phone_number_2"
                 android:autoLink="all"
                 android:linksClickable="true"
+                android:text="@string/phone_number_2"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -106,9 +106,9 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="4dp"
+                android:gravity="center"
                 android:text="@string/director"
                 android:textColor="@color/colorBlack"
-                android:gravity="center"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,9 +122,9 @@
                 android:layout_marginStart="4dp"
                 android:layout_marginTop="2dp"
                 android:layout_marginEnd="4dp"
+                android:gravity="center"
                 android:text="@string/directorName"
                 android:textColor="@color/colorPrimary"
-                android:gravity="center"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
